--- a/Core/Chenyuan/Chenyuan.csproj
+++ b/Core/Chenyuan/Chenyuan.csproj
@@ -95,7 +95,10 @@
     <Compile Include="Caching\PerRequestCacheManager.cs" />
     <Compile Include="Caching\RequestCache.cs" />
     <Compile Include="Caching\StaticCache.cs" />
+    <Compile Include="Collections\Generic\DictionaryExtensions.cs" />
+    <Compile Include="Collections\MultiArraySegment.cs" />
     <Compile Include="Collections\Multimap.cs" />
+    <Compile Include="Collections\ObjectValueDictionary.cs" />
     <Compile Include="Collections\ThreadSafeList.cs" />
     <Compile Include="CollectionTExtensions.cs" />
     <Compile Include="CommonHelper.cs" />
@@ -252,12 +255,20 @@
     <Compile Include="Services\IEntityLogService.cs" />
     <Compile Include="Utilities\ActionDisposable.cs" />
     <Compile Include="Utilities\Assert.cs" />
+    <Compile Include="Utilities\DescriptorUtil.cs" />
     <Compile Include="Utilities\EncodeUtility.cs" />
     <Compile Include="Utilities\HashEncodeType.cs" />
+    <Compile Include="Utilities\Inflector.cs" />
+    <Compile Include="Utilities\PropertyHelper.cs" />
+    <Compile Include="Utilities\RndKeyGen.cs" />
     <Compile Include="Utilities\Threading\LockExtensions.cs" />
     <Compile Include="Utilities\Threading\ReadLockDisposable.cs" />
     <Compile Include="Utilities\Threading\UpgradeableReadLockDisposable.cs" />
     <Compile Include="Utilities\Threading\WriteLockDisposable.cs" />
+    <Compile Include="Utilities\TryGetValueDelegate.cs" />
+    <Compile Include="Utilities\TypeCacheSerializer.cs" />
+    <Compile Include="Utilities\TypeCacheUtil.cs" />
+    <Compile Include="Utilities\TypeHelper.cs" />
     <Compile Include="VxIO\IVxEnviroment.cs" />
     <Compile Include="VxIO\IVxFileInfo.cs" />
     <Compile Include="VxIO\IVxFolderInfo.cs" />
