--- a/Core/Chenyuan/Chenyuan.csproj
+++ b/Core/Chenyuan/Chenyuan.csproj
@@ -48,6 +48,8 @@
     <Reference Include="System.Numerics" />
     <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.ServiceModel.Channels" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -172,6 +174,10 @@
     <Compile Include="Extensions\MiscExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Extensions\TypeExtensions.cs" />
+    <Compile Include="Fakes\FakeHttpContext.cs" />
+    <Compile Include="Fakes\FakeHttpRequest.cs" />
+    <Compile Include="Fakes\FakeHttpResponse.cs" />
+    <Compile Include="Fakes\FakeHttpSessionState.cs" />
     <Compile Include="Fasterflect\Caching\Cache.cs" />
     <Compile Include="Fasterflect\Caching\CacheStrategy.cs" />
     <Compile Include="Fasterflect\Common\Class1.cs" />
@@ -199,6 +205,8 @@
     <Compile Include="Fasterflect\Extensions\Core\MethodInfoExtensions.cs" />
     <Compile Include="Fasterflect\Extensions\Core\PropertyExtensions.cs" />
     <Compile Include="Fasterflect\Extensions\Core\TypeExtensions.cs" />
+    <Compile Include="Filters\FilterAttribute.cs" />
+    <Compile Include="Filters\IFilter.cs" />
     <Compile Include="HttpSecurityMode.cs" />
     <Compile Include="IAppInfo.cs" />
     <Compile Include="IAppVersion.cs" />
@@ -238,9 +246,6 @@
     <Compile Include="Messages\Token.cs" />
     <Compile Include="Messages\TokenCollection.cs" />
     <Compile Include="ObjectId.cs" />
-    <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
-    <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
-    <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="PersistentCollection.cs" />
     <Compile Include="Plugins\IPlugin.cs" />
     <Compile Include="Plugins\IPluginFinder.cs" />
@@ -251,8 +256,20 @@
     <Compile Include="Plugins\PluginManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resource.Designer.cs" />
+    <Compile Include="Security\EncryptionService.cs" />
+    <Compile Include="Security\IEncryptionService.cs" />
+    <Compile Include="Security\IChenyuanPrincipal.cs" />
+    <Compile Include="ServiceModel\WebSockets\IWebSocket.cs" />
+    <Compile Include="ServiceModel\WebSockets\IWebSocketCallback.cs" />
+    <Compile Include="ServiceModel\WebSockets\WebSocketCollection.cs" />
+    <Compile Include="ServiceModel\WebSockets\WebSocketHost.cs" />
+    <Compile Include="ServiceModel\WebSockets\WebSocketService.cs" />
     <Compile Include="Services\IApplicationContext.cs" />
     <Compile Include="Services\IEntityLogService.cs" />
+    <Compile Include="Tasks\TaskQueue.cs" />
+    <Compile Include="Threading\AsyncResultWrapper.cs" />
+    <Compile Include="Threading\AsyncVoid.cs" />
+    <Compile Include="Threading\SynchronizationContextUtil.cs" />
     <Compile Include="Utilities\ActionDisposable.cs" />
     <Compile Include="Utilities\Assert.cs" />
     <Compile Include="Utilities\DescriptorUtil.cs" />
@@ -295,12 +312,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="obj\Debug\Chenyuan.csproj.CoreCompileInputs.cache" />
-    <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="obj\Debug\TempPE\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
