--- a/Data/Chenyuan.Data.Base.Mappings/Chenyuan.Data.Base.Mappings.csproj
+++ b/Data/Chenyuan.Data.Base.Mappings/Chenyuan.Data.Base.Mappings.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7D453151-CDC3-41F8-9777-70B94E162DC3}</ProjectGuid>
+    <ProjectGuid>{E48B0BE9-07FA-4E0F-8ADA-ADED823D1575}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Chenyuan.Date</RootNamespace>
-    <AssemblyName>Chenyuan.Date</AssemblyName>
+    <RootNamespace>Chenyuan.Data.Base.Mappings</RootNamespace>
+    <AssemblyName>Chenyuan.Data.Base.Mappings</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,9 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac, Version=4.6.2.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\..\Data\packages\Autofac.4.6.2\lib\net45\Autofac.dll</HintPath>
-    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -42,58 +39,16 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseEfDataProvider.cs" />
-    <Compile Include="BaseEntityMap.cs" />
-    <Compile Include="ChenyuanObjectContext.cs" />
-    <Compile Include="ColumnAttribute.cs" />
-    <Compile Include="EF\BaseDataProviderManager.cs" />
-    <Compile Include="EF\EfDataProviderManager.cs" />
-    <Compile Include="EF\EfRepository.cs" />
-    <Compile Include="EF\EfRepositoryBase.cs" />
-    <Compile Include="EF\EntityLogInfoImpl.cs" />
-    <Compile Include="EntityObjectState.cs" />
-    <Compile Include="Extensions\DataTableExtensions.cs" />
-    <Compile Include="Hooks\HookedEntityEntry.cs" />
-    <Compile Include="Hooks\HookEntityMetadata.cs" />
-    <Compile Include="Hooks\IHook.cs" />
-    <Compile Include="Hooks\IPostActionHook .cs" />
-    <Compile Include="Hooks\IPreActionHook.cs" />
-    <Compile Include="Hooks\PostActionHook.cs" />
-    <Compile Include="Hooks\PostDeleteHook.cs" />
-    <Compile Include="Hooks\PostInsertHook.cs" />
-    <Compile Include="Hooks\PostUpdateHook.cs" />
-    <Compile Include="Hooks\PreActionHook.cs" />
-    <Compile Include="Hooks\PreDeleteHook.cs" />
-    <Compile Include="Hooks\PreInsertHook.cs" />
-    <Compile Include="Hooks\PreUpdateHook.cs" />
-    <Compile Include="IDataProvider.cs" />
-    <Compile Include="IDbContext.cs" />
-    <Compile Include="IDbSetProxy.cs" />
-    <Compile Include="IEfDataProvider.cs" />
-    <Compile Include="IRepository.cs" />
-    <Compile Include="IZupoDBContext.cs" />
-    <Compile Include="IZupoRepository.cs" />
-    <Compile Include="ObjectContextBase.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="V2\DataContext.cs" />
-    <Compile Include="V2\EntityBaseMap.cs" />
-    <Compile Include="V2\MyDataContext.cs" />
-    <Compile Include="V2\ChenyuanDbFactory.cs" />
-    <Compile Include="ZupoObjectContext.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Chenyuan\Chenyuan.csproj">
-      <Project>{ac03bb93-9668-4b5f-a719-482a489105a1}</Project>
-      <Name>Chenyuan</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
