--- a/Chenyuan.Lottery/Chenyuan.Lottery.Web/Chenyuan.Lottery.Web.csproj
+++ b/Chenyuan.Lottery/Chenyuan.Lottery.Web/Chenyuan.Lottery.Web.csproj
@@ -142,6 +142,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Timedtask\CensusdemoTask.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -202,6 +203,12 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Chenyuan.Lottery.Services\Chenyuan.Lottery.Services.csproj">
+      <Project>{ab1b4101-2a6c-4c2d-93dd-ce7c6181db06}</Project>
+      <Name>Chenyuan.Lottery.Services</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
